[package]
name = "wasm-from-scratch"
version = "0.1.0"
authors = ["rudy3091 <grayblack313@gmail.com>"]
categories = ["wasm"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.74"
rand = "0.7.3"
wee_alloc = { version = "0.4.2", optional = true }
js-sys = "0.3.22"

[dependencies.web-sys]
version = "0.3.22"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'console',
]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"
